--- a/src/screen/registration.scss
+++ b/src/screen/registration.scss
@@ -28,6 +28,14 @@
   height: 30px;
   border-radius: 8px;
   position: absolute;
-  bottom: 47px;
-  margin-left: 14px;
+  bottom: 49px;
+  margin-left: 40px;
+}
+.typing-avatar{
+  width: 20px;
+    height: 20px;
+    position: absolute;
+    bottom: 54px;
+    left: 15px;
+    border-radius: 100%;
 }
